--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "prepare-release": "cross-env npm run changelog && npm run build"
   },
   "dependencies": {
-    "aurelia-ssr-engine": "git+https://github.com/rquast/ssr-engine.git",
+    "aurelia-ssr-engine": "git+https://github.com/Vheissu/ssr-engine.git",
     "koa": "^2.3.0"
   },
   "devDependencies": {
